--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(40, 40, 40);
+    background-color: rgb(34, 34, 34);
 }
 
 a {
@@ -59,11 +59,12 @@ iframe {
     cursor: pointer;
     display: flex;
     justify-content: space-between;
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(40, 40, 40);
     color: rgb(170, 170, 170);
     margin-top: 4px;
     padding: 8px 20px;
     border: none;
+    border-radius: 4px;
     outline: none;
 }
 
